implementations/rust/ockam/ockam/tests/node_test/fail_if_does_not_return_result.rs
#[ockam::test]
async fn my_test(ctx: &mut ockam_node::Context) -> String {
    ctx.address();
}
